added new structure with templates and static in root, installed allauth, added home app with index.html

--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -1,4 +1,4 @@
-{% extends "shop/base.html" %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}
@@ -7,6 +7,6 @@
 
 {% block content %}
     <div class="product-detail">
-        
+        Product detail page
     </div>
 {% endblock %}
