--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     <header class="container-fluid fixed-top">
         <div id="banner" class="row text-center">
             <div class="col bg-black text-white">
-                <h4 class="logo-font my-1">*Free delivery *Fast delivery</h4>
+                <p><i class="fa-solid fa-check"></i> Free Delivery   <i class="fa-solid fa-check"></i> Fast   <i class="fa-solid fa-check"></i> Convenient<p>
             </div>
         </div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
