--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -43,11 +43,41 @@
                             {% csrf_token %}
                             <label for="variant">Choose size:</label>
                             <select name="variant" id="variant-select" required>
-                                <option value="">--Select size--</option>
                                 {% for variant in variants %}
                                     <option value="{{ variant.id }}" data-stock="{{ variant.stock }}" data-sku="{{ variant.sku }}">{{ variant.size }}</option>
                                 {% endfor %}
                             </select>
+                            <div id="stock-info" class="mt-2">
+                                <span id="stock-message"></span>
+                            </div>
+                            <div id="qty" class="col-12">
+                                <div class="mb-3 w-50">
+                                    <p class="mt-2">Quantity: </p>
+                                    <div class="input-group input-group-sm">
+                                        <div class="input-group-text">
+                                            <button class="decrement-qty btn btn-sm btn-black rounded-0"
+                                                data-item_id="{{ product.id }}" id="decrement-qty" disabled>
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control form-control-sm qty_input" type="number" name="quantity" value="1"
+                                            min="1" max="99" data-item_id="{{ product.id }}" id="id-qty" disabled>
+                                        <div class="input-group-text">
+                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                data-item_id="{{ product.id }}" id="increment-qty" disabled>
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt-2">
+                                <input type="submit" id="add-to-bag" class="btn btn-primary mt-2" value="Add to Bag">
+                            </div>
                             
                         </form>
                     {% endif %}
@@ -56,7 +86,10 @@
         </div>
     </div>
 {% endblock %}
-
+{% block postloadjs %}
+{{ block.super }}
+{% include 'shop/product/includes/stock_qty_script.html' %}
+{% endblock %}
 <!--code for showing stars in individual reviews-->
 {% for review in reviews %}
   <div>
