--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock %}
     {% block extra_meta %}
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     {% endblock %}
     <!-- Bootstrap CSS -->
     {% block corecss %}
