--- a/templates/base.html
+++ b/templates/base.html
@@ -75,11 +75,21 @@
         </nav>
     </header>
 
-   {% if messages %}
-    <div class="message-container">
-        
+    {% if messages %}
+    <div aria-live="polite" aria-atomic="true" class="position-fixed top-0 end-0 p-3" style="z-index: 1100;">
+        {% for message in messages %}
+        <div class="toast align-items-center text-white bg-success border-0 show" role="alert" id="bag-toast">
+            <div class="d-flex">
+                <div class="toast-body">
+                    {{ message }}
+                </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-   {% endif %}
+    {% endif %}
+
     
     {% block page_header %}
     {% endblock %}
