--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -16,6 +16,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="details-container mb-5 mt-md-5">
                     <h3 class="mb-0">{{ product.name }}</h3>
+                    <h5 class="mb-0">Price: £{{product.price}}</h5>
                     <div class="mt-2">
                        {% if avg_rating %}
                             <div>
