--- a/profiles/templates/profiles/view_profile.html
+++ b/profiles/templates/profiles/view_profile.html
@@ -29,6 +29,7 @@
           <thead>
             <tr>
               <th>Date</th>
+              <th>Order #</th>
               <th>Items</th>
               <th>Total</th>
             </tr>
@@ -37,6 +38,7 @@
             {% for order in orders %}
               <tr>
                 <td>{{ order.created|date:"SHORT_DATE_FORMAT" }}</td>
+                <td>{{ order.id }}</td>
                 <td>
                   <ul class="list-unstyled mb-0">
                     {% for item in order.items.all %}
