--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -15,6 +15,12 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="details-container mb-5 mt-md-5">
+                    {% if request.user.is_staff %}
+                    <!-- Link to edit for staff -->
+                    <a href="{% url 'shop:edit_product' product.pk %}" class="btn btn-warning btn-sm">Edit</a>
+                    <!-- Link to delete for staff -->
+                    <a href="{% url 'shop:delete_product' product.pk %}" class="btn btn-danger btn-sm">Delete</a>
+                    {% endif %}
                     <h3 class="mb-0">{{ product.name }}</h3>
                     <h5 class="mb-0">Price: £{{product.price}}</h5>
                     <div class="mt-2">
