added new customer confirmation email and order email to company email

--- a/profiles/templates/profiles/view_profile.html
+++ b/profiles/templates/profiles/view_profile.html
@@ -32,6 +32,7 @@
               <th>Order #</th>
               <th>Items</th>
               <th>Total</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -47,6 +48,11 @@
                   </ul>
                 </td>
                 <td>£{{ order.grand_total }}</td>
+                <td>
+                  <a href="{% url 'profiles:order_detail' order.id %}" class="btn btn-sm btn-outline-primary">
+                    View
+                  </a>
+                </td>
               </tr>
             {% endfor %}
           </tbody>
