--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -78,7 +78,10 @@
                         </ul>
                         <div class="d-grid">
                             <a href="{% url 'orders:checkout' %}" class="btn btn-success btn-lg">
-                                Proceed to Checkout
+                                <span class="btn-text">Proceed to Checkout</span><span class="icon"><i class="fas fa-chevron-right"></i></span>
+                            </a>
+                            <a href="{% url 'shop:view_list' %}" class="btn btn-secondary btn-lg mt-4">
+                                <span class="icon"><i class="fas fa-chevron-left"></i></span><span class="btn-text">Continue Shopping</span>
                             </a>
                         </div>
                     </div>
