--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -6,20 +6,22 @@
 <main>
   <div class="container top-m">
     <h2 class="text-center mb-4">Checkout Form</h2>
-    <div class="row">
-      
+    <div class="row">  
       <div class="col-md-8">
         <div class="card p-4">
           <form method="POST" action="{% url 'orders:create_checkout_session' %}">
-            {% csrf_token %}
-            {{ form|crispy }}
+              {% csrf_token %}
+              {{ form|crispy }}
 
-            <!-- Promo Code -->
-            <div class="mb-3">
-              <label for="promo_code" class="form-label">Promo Code</label>
-              <input type="text" class="form-control" id="promo_code" name="promo_code" placeholder="Enter promo code">
-            </div>
-            <button type="submit" class="btn btn-primary btn-lg w-100">Proceed to Secure Payment</button>
+              <!-- Promo Code -->
+              <div class="mb-3">
+                <label for="promo_code" class="form-label">Promo Code</label>
+                <input type="text" class="form-control" id="promo_code" name="promo_code" placeholder="Enter promo code">
+              </div>
+              <button type="submit" class="btn btn-primary btn-lg w-100">Proceed to Secure Payment</button>
+              <a href="{% url 'bag:view_bag' %}" class="btn btn-secondary btn-lg mt-4">
+                <span class="icon"><i class="fas fa-chevron-left"></i></span><span class="btn-text">Back to Bag</span>
+              </a>
           </form>
         </div>
       </div>
