--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -80,7 +80,7 @@
                             <a href="{% url 'orders:checkout' %}" class="btn btn-success btn-lg">
                                 <span class="btn-text">Proceed to Checkout</span><span class="icon"><i class="fas fa-chevron-right"></i></span>
                             </a>
-                            <a href="{% url 'shop:view_list' %}" class="btn btn-secondary btn-lg mt-4">
+                            <a href="{% url 'shop:product_list' %}" class="btn btn-secondary btn-lg mt-4">
                                 <span class="icon"><i class="fas fa-chevron-left"></i></span><span class="btn-text">Continue Shopping</span>
                             </a>
                         </div>
